<resources>
    <!--<string name="app_name">SegundaTC</string>-->
    <string name="app_name">CardioID AndroidAuto</string>
    <string name="content_providers">Content Providers</string>
    <string name="broadcast_receivers">Broadcast Receivers</string>
    <string name="intents">Intents</string>
    <string name="bound_services">Bound Services</string>
    <string name="sockets">Sockets</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aidl">AIDL</string>
</resources>